--- a/LeafletBlazor-main/LeafletBlazorTestRig/wwwroot/index.html
+++ b/LeafletBlazor-main/LeafletBlazorTestRig/wwwroot/index.html
@@ -26,6 +26,14 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
             integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
             crossorigin=""></script>
+    <script>
+
+        var Text = 'hello';
+
+        function setInput(button) {
+            button.style.visibility = "hidden";
+        }
+    </script>
 </body>
 
 </html>
